# rosalinddb

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-tests.yml  release.yml
adapters/landing/: parquet_reader.py
adapters/metrics/: metrics.py
adapters/observability/: logs.py  metrics.py  otel.py  tracing.py
adapters/queue/: queue.py
adapters/state/: conn_middleware.py  state.py
adapters/storage/: shard_tier.py  storage.py
bench/: .gitignore  README.md  analyze.py  analyze_agents.py  analyze_ssd_cache.py  build_ground_truth.py  build_shard_directly.py  capture_query_results.py  cold_reset.sh  docker-compose.bench.yml  docker-compose.recall-bench.yml  load_test_agents.js  load_test_queries.js  load_test_queries_ssd_cache.js  run_agents_bench.sh  run_matrix.sh  run_mmap_comparison.sh  run_ssd_cache.sh  seed_corpus.py
docs/: indexing.md
docs/api/: auth.md  imports.md  ingest.md  query.md  quotas.md  v1.md  vectors.md
docs/architecture/: architecture.md  delta-tier.md  mmap.md  recall-consolidate.md  ssd-cache.md
docs/deploy/: self-host.md
integrations/mem0/: README.md  demo.py  requirements.txt  rosalinddb.py  rosalinddb_client.py
observability/: docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
scripts/: migrate.py  smoke.py
services/_common/: __init__.py  catalog_listener.py  residency_writer.py
services/auth/: __init__.py  auth.py
services/control_plane/: __init__.py
services/ephemeral_runner/: __init__.py  run.py
services/index_builder/: run.py
services/query_api/: __init__.py  __main__.py  dp_app.py  dp_query.py  query_proxy.py  v1_query.py
services/source_registry/: __init__.py  main.py
services/validator_worker/: __init__.py  run.py
src/adapters/: config.py  errors.py
src/schemas/: __init__.py  v1.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth_disabled.py  test_builder_dataset_lock.py  test_builder_delta_fold_pg.py  test_builder_major_compaction_pg.py  test_cold_vector_crud_e2e.py  test_consolidation.py  test_consolidation_cross_db.py  test_cp_query_proxy.py  test_crud_union.py  test_delete_dataset_cache_invalidation.py  test_delta_tier_catalog_pg.py  test_dp_query.py  test_ephemeral_errors.py  test_hot_migration.py  test_hot_write_path.py  test_imports_api.py  test_incremental_indexing.py  test_query_api.py  (+21 more)
(+142 files in other folders)
